--- a/currencyratewidget/app/widget.html
+++ b/currencyratewidget/app/widget.html
@@ -1,36 +1,75 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8">
+
+<head>
+  <meta charset="UTF-8">
   <title>Курс валют</title>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" /> -->
   <link rel = "stylesheet" href="style.css">
- </head>
- <body>
-  <div class = "container">
-   <div class = "flag">
-    <button class = "en" id = "en"><img src="img/us.jpg" class = "flagimg1"></button>
-    <button class = "uk" id = "uk"><img src = "img/Flag_of_Ukraine.jpg" class = "flagimg2"></button>
-   </div>
-    <div class = "text">
-    <div class = "text1">
-   <p class = "p1" id = "p1">Курс НБУ</p>
-   <p class = "nbu" id = "nbu"></p>
-     </div>
-     <div class = "text2">
-   <p class = "p1" id = "p2">Курс в угоді</p>
-   <p class = "deal" id = "deal"></p>
-   </div>
-   <div class = "text3">
-   <p class = "p2" id = "p3">Різниця у відсотках</p>
-   <p class = "difference" id = "difference"></p>
-   </div>
-   </div>
-   <div class = "button-div">
+</head>
+
+<body>
+<main class = "container">
+
+<section class = "widget" aria-label = "Currency Rate Widget">
+
+<nav class = "menu">
+      <button class = "en" id = "en">
+        <img src="img/us.jpg" class = "flagimg1" alt = "USA flag">
+        <span class = "tooltip-1" id = "tooltip-1">English</span>
+      </button>
+      <button class = "uk" id = "uk">
+        <img src = "img/Flag_of_Ukraine.jpg" class = "flagimg2" alt = "Ukranian flag">
+        <span class = "tooltip-2" id = "tooltip-2">Українська</span>
+      </button>
+      <button class = "hamburger-menu" id = "hamburger-menu">
+        <img src = "img/menu-bar-icon.jpg" class = "icon">
+        <span class = "tooltip-3" id = "tooltip-3">Історія</span>
+      </button>
+</nav>
+
+<section class = "rates-container" aria-label="Currency Rates">
+  <div class = "nbu-container">
+    <p class = "nbu-label" id = "nbu-label">Курс НБУ</p>
+    <p class = "nbu-rate" id = "nbu"></p>
+  </div>
+  <div class = "deal-container">
+    <p class = "deal-label" id = "deal-label">Курс в угоді</p>
+    <p class = "deal-rate" id = "deal"></p>
+  </div>
+  <div class = "diff-container">
+    <p class = "diff-label" id = "diff-label">Різниця у відсотках</p>
+    <p class = "difference" id = "difference"></p>
+  </div>
+</section>
+
+  <div class = "button-div">
     <button class = "update-button" id = "update-button">Записати курс в угоду</button>
     <p class = "Succsess" id = "Success">Курс оновлено!</p>
-   </div>
   </div>
-    <script src="https://live.zwidgets.com/js-sdk/1.2/ZohoEmbededAppSDK.min.js"></script>
+</section>
+
+<section class = "history hidden" id = "history" aria-label = "History of deals and rates">
+  <table class = "history-table">
+    <thead class = "table-head" id = "table-head">
+      <tr>
+        <th id = "history-date">Дата</th>
+        <th id = "history-rate">Курс</th>
+        <th id = "history-diff">Різниця %</th>
+      </tr>
+    </thead>
+    <tbody class = "table-body" id = "table-body">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+</main>
+  <script src="https://live.zwidgets.com/js-sdk/1.2/ZohoEmbededAppSDK.min.js"></script>
   <script src = "script.js"></script>
  </body>
 </html>
